modal finalizado, sem estilização

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       </ul>
     </nav>
     <figure class="imglogo">
-      <a href="./index.html" >
+      <a href="./index.html">
         <img src="img/logo.png" alt="image host" class="logo">
       </a>
     </figure>
@@ -45,8 +45,59 @@
   <hr>
 
   <footer>
-    <p> Copyright by ©️ Thâmara Bortolin e Wayra Arendartchuk </p>
+    <section class="modal-conteiner">
+<a href="#abrir">Para mais informações sobre as Desenvolvedoras, clique aqui</a>
+
+<div id="abrir" class="modal">
+  <a href="#fechar" class="fechar">X</a>
+  <h2>Desenvolvedoras</h2>
+
+    <figure>
+      <a href="https://github.com/Brulibra">
+        <img src="img/github.png" width="25" height="25" class="github" id="github">
+      </a>
+      <p class="nome">Bruna de Paula</p>
+    </figure>
+
+    <figure>
+      <a href="https://github.com/elizenai">
+        <img src="img/github.png" width="25" height="25" class="github" id="github">
+      </a>
+      <p class="nome">Elizenai Silva</p>
+    </figure>
+
+    <figure>
+      <a href="https://github.com/GabrielaMedrado">
+        <img src="img/github.png" width="25" height="25" class="github" id="github">
+      </a>
+      <p class="nome">Gabriela Medrado</p>
+    </figure>
+
+    <figure>
+      <a href="https://github.com/MonicaGuimaraes">
+        <img src="img/github.png" width="25" height="25" class="github" id="github">
+      </a>
+      <p class="nome">Mônica Guimarães</p>
+    </figure>
+
+    <figure>
+      <a href="https://github.com/suelenescorcio">
+        <img src="img/github.png" width="25" height="25" class="github" id="github">
+      </a>
+      <p class="nome">Suelen Escorcio</p>
+    </figure>
+
+    <figure>
+      <a href="https://github.com/ThamaraBortolin">
+        <img src="img/github.png" width="25" height="25" class="github" id="github">
+      </a>
+      <p class="nome">Thâmara Bortolin</p>
+    </figure>
+</div>
+
+    </section>
   </footer>
+
   <script src="main.js" type="module"></script>
 </body>
 
