--- a/src/films.html
+++ b/src/films.html
@@ -15,7 +15,7 @@
     <ul class="list">
       <li class="content">
         <a id="films" href="films.html">
-          Films
+          <strong>Films</strong>
         </a>
       </li>
       <li class="content carac">
@@ -58,6 +58,13 @@
     <hr>
     <section class="cardsFilms" id="cardsFilms">
     </section>
+    <a href="#top">
+      <img
+        src="img/VOLTAR_AO_TOPO (2).png"
+        class="fixed-button"
+        alt="Button-Top"
+      />
+    </a>
   </main>
   <hr>
   <footer>
