--- a/src/personagens.html
+++ b/src/personagens.html
@@ -20,7 +20,7 @@
         </li>
         <li class="content carac">
           <a id="characters"><a href="personagens.html">
-              Characters</a>
+              <strong>Characters</strong></a>
           </a>
         </li>
         <li class="content">
