--- a/src/index.html
+++ b/src/index.html
@@ -9,33 +9,7 @@
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Didact+Gothic" />
 </head>
 
-<body>
-  <header role="banner" class="header">
-    <nav>
-      <ul class="list">
-        <li class="content">
-          <a id="films" href="films.html">
-            Films
-          </a>
-        </li>
-        <li class="content carac">
-          <a id="characters"><a href="personagens.html">
-              Characters</a>
-          </a>
-        </li>
-        <li class="content">
-          <a id="about" href="about.html">
-            About
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <figure class="imglogo">
-      <a href="./index.html" >
-        <img src="img/logo.png" alt="image host" class="logo">
-      </a>
-    </figure>
-  </header>
+<body class="body" >
   <main class="main">
     <figure class="imgmain">
       <img src="img/chihiro.jpg" class="imagemChihiro">
@@ -47,7 +21,7 @@
   <footer>
     <p> Copyright by ©️ Thâmara Bortolin e Wayra Arendartchuk </p>
   </footer>
-  <script src="main.js" type="module"></script>
+  <script src="./index.js" type="module"></script>
 </body>
 
 
