--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,9 @@
   <hr>
 
   <footer>
-    <section class="modal-conteiner">
 <a href="#abrir">Para mais informações sobre as Desenvolvedoras, clique aqui</a>
 
-<div id="abrir" class="modal">
+<div id="abrir" class="modal" class="modal-conteiner">
   <a href="#fechar" class="fechar">X</a>
   <h2>Desenvolvedoras</h2>
 
@@ -95,7 +94,6 @@
     </figure>
 </div>
 
-    </section>
   </footer>
 
   <script src="main.js" type="module"></script>
