botao voltar ao topo e destaque

--- a/src/films.html
+++ b/src/films.html
@@ -14,11 +14,11 @@
   <nav>
     <ul class="list">
       <li class="content">
-        <a id="films" href="films.html">
-          <strong>Films</strong>
+        <a id="films" class="page-films" href="films.html">
+          Films
         </a>
       </li>
-      <li class="content carac">
+      <li class="content">
         <a id="characters"><a href="personagens.html">
             Characters</a>
         </a>
@@ -61,7 +61,7 @@
     <a href="#top">
       <img
         src="img/VOLTAR_AO_TOPO (2).png"
-        class="fixed-button"
+        class="top-button"
         alt="Button-Top"
       />
     </a>
