--- a/src/personagens.html
+++ b/src/personagens.html
@@ -18,9 +18,9 @@
             Films
           </a>
         </li>
-        <li class="content carac">
-          <a id="characters"><a href="personagens.html">
-              <strong>Characters</strong></a>
+        <li class="content">
+          <a id="characters" class="page-characters" href="personagens.html">
+              Characters</a>
           </a>
         </li>
         <li class="content">
@@ -46,6 +46,13 @@
     <hr>
     <sections class="cardsCharacters" id="cardsCharacters">
     </sections>
+    <a href="#top">
+      <img
+        src="img/VOLTAR_AO_TOPO (2).png"
+        class="top-button"
+        alt="Button-Top"
+      />
+    </a>
   </main>
   <hr>
   <footer>
