--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header role="banner" class="header">
+  <header>
     <nav>
       <ul class="list">
         <li class="content">
@@ -30,16 +30,50 @@
         </li>
       </ul>
     </nav>
-    <figure class="imglogo">
-      <a href="./index.html" >
-        <img src="img/logo.png" alt="image host" class="logo">
-      </a>
-    </figure>
   </header>
-  <main class="main">
-    <figure class="imgmain">
-      <img src="img/chihiro.jpg" class="imagemChihiro">
-    </figure>
+  <main>
+    <section class="carrosel">
+      <ul>
+        <li>
+          <img src="img/viagemchihiro.jpg" alt="">
+        </li>
+        <li>
+          <img src="img/ocastelonoceu.jpg" alt="">
+        </li>
+        <li>
+          <img src="img/princesakaguya.png" alt="">
+        </li>
+        <li>
+          <img src="img/princesamonoke.jpg" alt="">
+        </li>
+        <li>
+          <img src="img/vagalumes.jpg" alt="">
+        </li>
+        <li>
+          <img src="img/meuamigototoro.jpg" alt="">
+        </li>
+      </ul>
+    </section>
+    <section class="about">
+    <h1> About the Studio</h1>
+    <p>Studio Ghibli, acclaimed Japanese animation film studio that was founded in 1985 by animators and directors
+      Miyazaki
+      Hayao and Takahata Isao and producer Suzuki Toshio. Studio Ghibli is known for the high quality of its
+      filmmaking
+      and its artistry. Its feature films won both critical and popular praise and influenced other animation
+      studios.
+      The
+      headquarters are in Tokyo. The first official Studio Ghibli release was Tenkū no shiro Rapyuta (1986; Castle
+      in
+      the
+      Sky). Most of the films produced by Studio Ghibli were written and directed by Miyazaki and include, in
+      addition
+      to
+      the aforementioned, Tonari no Totoro (1988; My Neighbor Totoro), Majo no takkyūbin (1989; Kiki’s Delivery
+      Service),
+      and Kurenai no buta (1992; Porco Rosso).
+    </p>
+  </section>
   </main>
 
   <hr>
