home css responsive

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
   </main>
 
   <footer>
-    <a href="#abrir">Para mais informações sobre as Desenvolvedoras, clique aqui</a>
+    <a href="#abrir" class="footerText">Para mais informações sobre as Desenvolvedoras, clique aqui</a>
     <div id="abrir" class="modal" class="modal-conteiner">
       <a href="#fechar" class="fechar">X</a>
       <h2>Desenvolvedoras</h2>
