--- a/src/personagens.html
+++ b/src/personagens.html
@@ -14,6 +14,7 @@
   <main class="mainPersonagens">
     <input type="search" id="searchCharac" class="filterCharacters inputCharacters" placeholder="Find a character">
     <select id="selecOrder" name="filtroPersonagens" class="filterCharacters">
+      <option id="order" value="order">Order</option>
       <option id="ascend" value="a-z">A-Z</option>
       <option id="descending" value="z-a">Z-A</option>
     </select>
