organização dos arquivos

--- a/src/personagens.html
+++ b/src/personagens.html
@@ -14,6 +14,7 @@
   <main class="mainPersonagens">
     <input type="search" id="searchCharac" class="filterCharacters inputCharacters" placeholder="Find a character">
     <select id="selecOrder" name="filtroPersonagens" class="filterCharacters">
+      <option id="order" value="order">Order</option>
       <option id="ascend" value="a-z">A-Z</option>
       <option id="descending" value="z-a">Z-A</option>
     </select>
@@ -38,7 +39,6 @@
       <option value="The Tale of the Princess Kaguya">The Tale of the Princess Kaguya</option>
       <option value="When Marnie Was There">When Marnie Was There</option>
       <option value="Whisper of the Heart">Whisper of the Heart</option>
-    </select>
     </select>
     <sections class="cardsCharacters" id="cardsCharacters">
     </sections>
