--- a/films.html
+++ b/films.html
@@ -27,7 +27,7 @@
       <option value="lower" id="optionLower">Lower</option>
       <option value="higher" id="optionHigher">Higher</option>
     </select>
-    <select name="filterDirectors" class="filterDirectors" id="inputDirector">
+    <select name="filterDirectors" class="filterDirectors filterFilms" id="inputDirector">
       <option value="director">Director</option>
       <option value="Gorō Miyazaki" id="gorōMiyazaki">Gorō Miyazaki</option>
       <option value="Hayao Miyazaki" id="hayaoMiyazaki">Hayao Miyazaki</option>
@@ -38,7 +38,7 @@
     </select>
 
 
-    <button type="reset" class="resetButton" id="clearButton">Clear</button>
+    <button type="reset" class="resetButton filterFilms" id="clearButton">Clear</button>
 
     <section class="cardsFilms" id="cardsFilms">
     </section>
