--- a/index.html
+++ b/index.html
@@ -61,37 +61,37 @@
       <a href="#fechar" class="fechar">X</a>
       <h2>Desenvolvedoras</h2>
       <figure>
-        <a href="https://github.com/Brulibra">
+        <a href="https://github.com/Brulibra" target="_blank">
           <img src="img/github.png" width="25" height="25" class="github" id="github">
         </a>
         <p class="nome">Bruna de Paula</p>
       </figure>
       <figure>
-        <a href="https://github.com/elizenai">
+        <a href="https://github.com/elizenai" target="_blank">
           <img src="img/github.png" width="25" height="25" class="github" id="github">
         </a>
         <p class="nome">Elizenai Silva</p>
       </figure>
       <figure>
-        <a href="https://github.com/GabrielaMedrado">
+        <a href="https://github.com/GabrielaMedrado" target="_blank">
           <img src="img/github.png" width="25" height="25" class="github" id="github">
         </a>
         <p class="nome">Gabriela Medrado</p>
       </figure>
       <figure>
-        <a href="https://github.com/MonicaGuimaraes">
+        <a href="https://github.com/MonicaGuimaraes" target="_blank">
           <img src="img/github.png" width="25" height="25" class="github" id="github">
         </a>
         <p class="nome">Mônica Guimarães</p>
       </figure>
       <figure>
-        <a href="https://github.com/suelenescorcio">
+        <a href="https://github.com/suelenescorcio" target="_blank">
           <img src="img/github.png" width="25" height="25" class="github" id="github">
         </a>
         <p class="nome">Suelen Escorcio</p>
       </figure>
       <figure>
-        <a href="https://github.com/ThamaraBortolin">
+        <a href="https://github.com/ThamaraBortolin" target="_blank">
           <img src="img/github.png" width="25" height="25" class="github" id="github">
         </a>
         <p class="nome">Thâmara Bortolin</p>
