--- a/personagens.html
+++ b/personagens.html
@@ -18,8 +18,8 @@
       <option id="ascend" value="a-z">A-Z</option>
       <option id="descending" value="z-a">Z-A</option>
     </select>
-    <select name="filterCharactersFilm" class="filterCharactersFilm" id="inputCharactersFilm">
-      <option value="filmsCharacters">Film`s Characters</option>
+    <select name="filterCharactersFilm" class="filterCharactersFilm filterCharacters" id="inputCharactersFilm">
+      <option value="filmsCharacters">Film's Characters</option>
       <option value="Castle in the Sky">Castle in the Sky</option>
       <option value="My Neighbor Totoro">My Neighbor Totoro</option>
       <option value="Kiki's Delivery Service">Kiki's Delivery Service</option>
