--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Data Lovers</title>
+  <title>Ghibli's Tour</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Didact+Gothic" />
 </head>
@@ -58,41 +58,43 @@
   <footer>
     <a href="#abrir" class="footerText">Para mais informações sobre as Desenvolvedoras, clique aqui</a>
     <div id="abrir" class="modal" class="modal-conteiner">
-      <a href="#fechar" class="fechar">X</a>
+      <a href="#fechar" class="fechar">
+        <img src="./img/x.png" width="25" height="25" alt="Fechar">
+      </a>
       <h2>Desenvolvedoras</h2>
       <figure>
         <a href="https://github.com/Brulibra" target="_blank">
-          <img src="img/github.png" width="25" height="25" class="github" id="github">
+          <img src="img/github.png" alt="github" width="25" height="25" class="github" id="github">
         </a>
         <p class="nome">Bruna de Paula</p>
       </figure>
       <figure>
         <a href="https://github.com/elizenai" target="_blank">
-          <img src="img/github.png" width="25" height="25" class="github" id="github">
+          <img src="img/github.png" alt="github" width="25" height="25" class="github" id="github">
         </a>
         <p class="nome">Elizenai Silva</p>
       </figure>
       <figure>
         <a href="https://github.com/GabrielaMedrado" target="_blank">
-          <img src="img/github.png" width="25" height="25" class="github" id="github">
+          <img src="img/github.png" alt="github" width="25" height="25" class="github" id="github">
         </a>
         <p class="nome">Gabriela Medrado</p>
       </figure>
       <figure>
         <a href="https://github.com/MonicaGuimaraes" target="_blank">
-          <img src="img/github.png" width="25" height="25" class="github" id="github">
+          <img src="img/github.png" alt="github" width="25" height="25" class="github" id="github">
         </a>
         <p class="nome">Mônica Guimarães</p>
       </figure>
       <figure>
         <a href="https://github.com/suelenescorcio" target="_blank">
-          <img src="img/github.png" width="25" height="25" class="github" id="github">
+          <img src="img/github.png" alt="github" width="25" height="25" class="github" id="github">
         </a>
         <p class="nome">Suelen Escorcio</p>
       </figure>
       <figure>
         <a href="https://github.com/ThamaraBortolin" target="_blank">
-          <img src="img/github.png" width="25" height="25" class="github" id="github">
+          <img src="img/github.png" alt="github" width="25" height="25" class="github" id="github">
         </a>
         <p class="nome">Thâmara Bortolin</p>
       </figure>
